syntax = "proto3";

//option csharp_namespace = "ConsoleApp.Services";

package artist;

service ArtistService {
	// Sends a greeting
	rpc ArtistListPaginate (ArtistListPaginatedRequest) returns (ArtistListPaginatedResponse);
}

// The request message containing the user's name.
message ArtistListPaginatedRequest {
	string name = 1;
	int32 pageIndex = 2;
	int32 pageSize = 3;

}

// The response message containing the greetings.
message ArtistListPaginatedResponse {
	repeated ArtistItem items = 1;
	int32 totalItems = 2;
}


message ArtistItem {
	string name = 1;
	
	
}
